# awesome-cxx-utility

./: .gitignore  CMakeLists.txt  README.md  test.sln  test.vcxproj  test.vcxproj.filters
.github/workflows/: clang-format.yml
test/: test_event_queue.cpp  test_fsm.cpp  test_shutil.cpp  test_string_utils.cpp
utility/: event_queue.hpp  fsm.hpp  shutil.hpp  string_utils.hpp
